# rust-devops-ideas

./: .gitignore  AIRGAP_DISTRIBUTION.md  CLAUDE.md  CONVENTIONS.md  README.md  distribute.sh  setup_from_dist.sh
neomath/: Cargo.toml
neomath/src/: arithmetic.rs
neomath_consumer/: .gitignore  Cargo.toml  README.md  fetch-from-dist.sh
neomath_consumer/src/: main.rs
